app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import 'bootstrap';
@import 'font-awesome';
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');

body {
  font-family: 'Nunito', sans-serif;
}

.container-fluid {
  padding-right: 0;
  padding-left: 0;
}

.row {
  margin: 0;
}

.col-xl,
.col-xl-auto,
.col-xl-12,
.col-xl-11,
.col-xl-10,
.col-xl-9,
.col-xl-8,
.col-xl-7,
.col-xl-6,
.col-xl-5,
.col-xl-4,
.col-xl-3,
.col-xl-2,
.col-xl-1,
.col-lg,
.col-lg-auto,
.col-lg-12,
.col-lg-11,
.col-lg-10,
.col-lg-9,
.col-lg-8,
.col-lg-7,
.col-lg-6,
.col-lg-5,
.col-lg-4,
.col-lg-3,
.col-lg-2,
.col-lg-1,
.col-md,
.col-md-auto,
.col-md-12,
.col-md-11,
.col-md-10,
.col-md-9,
.col-md-8,
.col-md-7,
.col-md-6,
.col-md-5,
.col-md-4,
.col-md-3,
.col-md-2,
.col-md-1,
.col-sm,
.col-sm-auto,
.col-sm-12,
.col-sm-11,
.col-sm-10,
.col-sm-9,
.col-sm-8,
.col-sm-7,
.col-sm-6,
.col-sm-5,
.col-sm-4,
.col-sm-3,
.col-sm-2,
.col-sm-1,
.col,
.col-auto,
.col-12,
.col-11,
.col-10,
.col-9,
.col-8,
.col-7,
.col-6,
.col-5,
.col-4,
.col-3,
.col-2,
.col-1 {
  padding-right: 0;
  padding-left: 0;
}

.w-35 {
  width: 35%;
}

.rounded-border {
  border-radius: 10px;
}

.bg-main-grey {
  background-color: #f5f6f8;
}

.bg-white {
  background-color: white;
}

.bg-left-tab {
  background-color: #1b2a3e;
}

.bg-left-bt-tab {
  background-color: #213346;
}

.bg-top-tab {
  background-color: #51a2e4;
}

.logo {
  width: 45px;
  height: 45px;
  margin: 13px;
}

.logo-sm {
  width: 30px;
  height: 30px;
  margin: 10px;
}

.color-grey {
  color: #386E9A;
}

.color-grey:hover {
  color: #386E9A;
}

.profile {
  width: 40%;
}

.profile-right {
  max-width: 90px;
  max-height: 90px;
}

.bold-name {
  font-size: 0.8em;
  color: #526478;
  font-weight: bold;
  text-transform: uppercase;
  line-height: 1.1em;
}

.bold-name-right {
  font-size: 0.8em;
  font-weight: bold;
  text-transform: uppercase;
  line-height: 1.1em;
}

.bold-flw {
  font-size: 0.6em;
  color: #526478;
  font-weight: bold;
  line-height: 1.1em;
}

.light-color {
  color: #f2f8fb;
  font-weight: bold;
}

.border-dark-bl-1,
.border-dark-bl-2 {
  border-top: 1px solid #162730;
  border-bottom: 1px solid #162730;
}

.border-dark-bl-1 {
  border-right: 1px solid #162730;
}

.left-links,
.central-links {
  text-transform: uppercase;
}

.left-links:hover {
  background-color: #4b9ad3;
}

.left-links:hover span,
.left-links:hover i {
  color: white;
}

.left-bold-txt {
  font-weight: bold;
  color: #526478;
  font-size: 0.6em;
}

.center-bold-txt {
  font-weight: bold;
  color: #526478;
}

.right-bold-txt {
  font-weight: bold;
}

.color-light-grey {
  color: #bebfc1;
}

.right-tab {
  padding-top: 2px;
}

.right-tab-prof {
  padding-top: 2px;
  margin-top: 1px;
}

.central-links {
  border-bottom: 3px solid #51a2e4;
}

.left-links:hover,
.central-links:hover {
  text-decoration: none;
}

.borderb-grey {
  border-bottom: 1px solid #ced2d5;
}

.borderl-grey {
  border-left: 1px solid #ced2d5;
}

.logo-left {
  color: #526478;
  font-size: 0.8em;
}

.form-label {
  display: block;
  font: 13px Arial, Helvetica, sans-serif;
  color: #888;
  margin-bottom: 5px;
  margin-top: 10px;   
}

.form-text {
  display: block;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  width: 100%;
  padding: 8px;
  border-radius: 6px;
  -webkit-border-radius:6px;
  -moz-border-radius:6px;
  border: 2px solid #fff;
  box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);
  -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);
  -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.33);   
}

.error-sm {
  color: red;
  font-size: 0.7em;
}

.form-btn {
  background: #1b2a3e;
  padding: 8px 20px 8px 20px;
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  color: #fff;
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.12);
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
  box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.17);
  border: 1px solid #162730;
  font-size: 15px;
}

.form-btn:hover {
  background: #213346;
  -moz-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.28);
  -webkit-box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.28);
  box-shadow: inset 0px 2px 2px 0px rgba(255, 255, 255, 0.28);
}

.unfollow-btn {
  height: 40px;
  margin-right: 1.5em;
}

.unfollow-btn:hover {
  color: white;
}

#notice {
  color: white;
  background-color: #6EE284;
  font-size: 1.4em;
}

#alert {
  color: white;
  background-color: #EE7979;
  font-size: 1.4em;
}

.field_with_errors {
  input {
    border: solid 1px red;
  }
  label {
    color: red;
  }
}

.text-blue-bold {
  color: #51a2e4;
  font-size: 1.2em;
  font-weight: bold;
}

.timeline-photo {
  width: 60px;
  height: 60px;
  margin: 5px;
}

.edit-opinion {
  width: 12px;
  height: 12px;
}

.textdec-none:hover {
  text-decoration: none;
}

.who-photo {
  width: 65px;
  height: 65px;
}

.circle-link {
  border: 1px solid #888;
  font-size: 1.2em;
  color: #888;
  border-radius: 100%;
  padding: 3px 7px;
}

.circle-link:hover {
  color: #888;
  background-color: white;
}

.cover-img {
  height: 200px;
  width: 100%;
}

.username {
  font-size: 0.8em;
}

@media (min-width: 576px) {
  .bold-name {
    font-size: 1.2em;
    line-height: 1.2em;
  }
  .bold-flw {
    font-size: 0.8em;
    line-height: 1.2em;
  }
  .left-bold-txt {
    font-size: 1em;
  }
  .logo-left {
    font-size: 1.5em;
  }
  .profile-right {
    max-width: 106px;
    height: 106px;
  }
}

@media (min-width: 768px) {
  .bold-name-right {
    font-size: 1.2em;
    line-height: 1.2em;
  }
  .username {
    font-size: 1em;
  }
}

